finished new investment view and investment index, got stuck on relations

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,10 +15,10 @@
 			  <div><%= f.label :password_confirmation %><br />
 			  <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %></div>
 
-			  <div><%= f.label "User Name" %><br />
+			  <div><%= f.label :username %><br />
 			  <%= f.text_field :username, placeholder: "johnsmith90" %></div>
 
-			  <div><%= f.label "Country" %><br />
+			  <div><%= f.label :country %><br />
 			  <%= f.text_field :country, placeholder: "United States" %></div>
 
 			  <div><%= f.submit "Sign up" , :class => 'button' %></div>
