--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,13 @@
     <div class="sticky">
     <nav class="top-bar" data-topbar>
 
+      
+
       <section class="top-bar-section">
+        <ul class="title-area">
+          <li class="name"><%= link_to "Angelic", root_path %></li>
+        </ul>
+        
         <ul class="left">
           <li><a href="#">Portfolio Dashboard</a></li>
           <li class="has-dropdown">
@@ -29,17 +35,21 @@
         </ul>
 
         <ul class="right">
-          <li><a href="#">Log In</a></li>
-          <li><a href="/users/sign_up">New User</a></li>
-          <li class="has-form">
-              <div class="row collapse">
-                <div class="large-8 small-9 columns">
-                  <input type="text" placeholder="Find Stuff">
+          <%if user_signed_in? %>
+            <li><%= link_to "Sign Out", logout_path %></li>
+          <% else %>
+            <li><%= link_to "Log In", login_path %></li>
+            <li><%= link_to "New User", new_user_registration_path %></li>
+          <% end %>
+            <li class="has-form">
+                <div class="row collapse">
+                  <div class="large-8 small-9 columns">
+                    <input type="text" placeholder="Find Stuff">
+                  </div>
+                  <div class="large-4 small-3 columns">
+                    <a href="#" class="button expand">Search</a>
+                  </div>
                 </div>
-                <div class="large-4 small-3 columns">
-                  <a href="#" class="button expand">Search</a>
-                </div>
-              </div>
             </li>
         </ul>
       </section>
