added table to show investment, need to add styling

--- a/app/views/investments/index.html.erb
+++ b/app/views/investments/index.html.erb
@@ -15,7 +15,7 @@
 			<td><%= investment.investment_type %></td>
 			<td><%= investment.amount_invested %></td>
 			<td><%= investment.investment_date %></td>
-			<td><%= link_to "view", investments_show_path %></td>
+			<td><%= link_to "view", investment %></td>
 			<td><%= link_to "edit", investments_edit_path(investment) %></td>
 		</tr>
 
