--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         </ul>
         
         <ul class="left">
-          <li><a href="#">Portfolio Dashboard</a></li>
+          <li><%= link_to "Portfolio", investments_index_path %></li>
           <li class="has-dropdown">
             <a href="#">Contacts</a>
             <ul class="dropdown">
