--- a/app/assets/stylesheets/investments.css.scss
+++ b/app/assets/stylesheets/investments.css.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the Investments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.investment {
+  float: center;
+  width: 500px;
+  margin: 20px 2px;
+  padding: 15px 25px;
+  text-align: center;
+  background: white;
+  background-clip: padding-box;
+  border: 2px solid #e5ded6;
+  border-color: rgba(black, .1);
+  border-radius: 5px;
+}
+
+.investment-name {
+	font-size: 50px;
+	font-style: bold;
+}
+
+ul {
+ list-style: none;
+}
