--- a/app/views/investments/edit.html.erb
+++ b/app/views/investments/edit.html.erb
@@ -13,6 +13,9 @@
 			  <div><%= f.label :amount_invested %><br />
 			  <%= f.text_field :amount_invested%></div>
 
+			  <div><%= f.label "Current Percent Ownership (1-100)" %><br />
+			  <%= f.text_field :pct_ownership%></div>
+
 			  <div><%= f.label :invstment_date %><br />
 			  <%= f.text_field :investment_date%></div>
 
