--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -24,9 +24,9 @@
 // $base-line-height: 150%;
 
 // We use this to control whether or not CSS classes come through in the gem files.
-// $include-html-classes: true;
-// $include-print-styles: true;
-// $include-html-global-classes: $include-html-classes;
+$include-html-classes: true;
+$include-print-styles: true;
+$include-html-global-classes: $include-html-classes;
 
 // Grid
 
@@ -826,10 +826,10 @@
 // $include-html-pricing-classes: $include-html-classes;
 
 // We use this to control the border color
-$price-table-border: solid 1px #ddd;
+// $price-table-border: solid 1px #ddd;
 
 // We use this to control the bottom margin of the pricing table
-$price-table-margin-bottom: rem-calc(20);
+// $price-table-margin-bottom: rem-calc(20);
 
 // We use these to control the title styles
 // $price-title-bg: #333;
@@ -1082,8 +1082,8 @@ $price-table-margin-bottom: rem-calc(20);
 // $table-border-color: #ddd;
 
 // These control the table head styles
-// $table-head-bg: #f5f5f5  ;
-// $table-head-font-size: rem-calc(14);
+// $table-head-bg: black;
+// $table-head-font-size: rem-calc(16);
 // $table-head-font-color: #222;
 // $table-head-font-weight: bold;
 // $table-head-padding: rem-calc(8 10 10);
