--- a/app/views/investment_rounds/show.html.erb
+++ b/app/views/investment_rounds/show.html.erb
@@ -1,8 +1,8 @@
-
 <div class="row">
 	<div class="large-3 large-offset-3 columns">
 		<ul class="investment">
 			<li class="investment-name"><%= @investment.name %></li>
+			<li class="investment-round-name"><%= @investment.investment_round.round_name %></li>
 			<li>
 				<div class="large-3 small-offset-1 columns">
 					<table class ="investment-show-table">
@@ -17,7 +17,7 @@
 						</tr>
 						<tr>
 							<td class="investment-descriptor">Investment Type</td>
-							<td><%= @investment.investment_type %></td>
+							<td><%= @investment.investment_type %><td>
 						</tr>
 						<tr>
 							<td class="investment-descriptor">Amount Invested</td>
@@ -25,19 +25,19 @@
 						</tr>
 						<tr>
 							<td class="investment-descriptor">Current % Ownership</td>
-							<td><%= number_to_percentage(@investment.pct_ownership, precision: 2) %></td>
+							<td><%= number_to_percentage(@investment.pct_ownership, precision: 2) %><td>
 						</tr>
 						<tr>
 							<td class="investment-descriptor">Shares Owned</td>
-							<td><%= number_with_delimiter(@investment.shares_bought) %></td>
+							<td><%= number_with_delimiter(@investment.shares_bought) %><td>
 						</tr>
 						<tr>
 							<td class="investment-descriptor">Initial Share Price</td>
-							<td><%= number_to_currency(@investment.init_share_price, precision: 2) %></td>
+							<td><%= number_to_currency(@investment.init_share_price, precision: 2) %><td>
 						</tr>
 						<tr>
 							<td class="investment-descriptor">Initial Post-Money Valuation</td>
-							<td><%= number_to_currency(@investment.init_post_money, precision: 0) %></td>
+							<td><%= number_to_currency(@investment.init_post_money, precision: 0) %><td>
 						</tr>
 					</table>
 			</div>
@@ -48,5 +48,4 @@
 <div class="large-3 large-offset-5 columns">
 	<%= link_to "edit", edit_investment_path, :class => "button" %>
 	<%= link_to "Back", investments_index_path, :class => "button" %>
-	<%= link_to "Add New Investment Round", new_investment_round_path(:investment_id => @investment.id) %>
 <div class="large-3 large-offset-4 columns">
