--- a/app/views/investments/edit.html.erb
+++ b/app/views/investments/edit.html.erb
@@ -7,11 +7,17 @@
 			  <div><%= f.label :name %><br />
 			  <%= f.text_area :name %></div>
 
+			  <div><%= f.label :description %><br />
+			  <%= f.text_area :description %></div>
+
 			  <div><%= f.label :investment_type %><br />
 			  <%= f.text_area :investment_type %></div>
 
 			  <div><%= f.label :amount_invested %><br />
 			  <%= f.text_field :amount_invested%></div>
+
+				<div><%= f.label "Shares Owned" %><br />
+			  <%= f.text_field :shares_bought %></div>
 
 			  <div><%= f.label "Current Percent Ownership (1-100)" %><br />
 			  <%= f.text_field :pct_ownership%></div>
