--- a/app/views/investments/index.html.erb
+++ b/app/views/investments/index.html.erb
@@ -1,11 +1,3 @@
-  <script src="js/vendor/jquery.js"></script>
-  <script src="/js/foundation.min.js"></script>
-
-  <script>
-    $(document).foundation();
-  </script>
-
-
 <h1>My Investments</h1>
 
 <table class="portfolio-table">
@@ -16,6 +8,7 @@
 				<td><strong>Investment Type</strong></td>
 				<td><strong>Amount Invested</strong></td>
 				<td><strong>Current % Ownership</strong></td>
+				<td><strong>Shares Owned</strong></td>
 				<td><strong>Investment Date</strong></td>
 			</div>
 		</tr>
@@ -24,8 +17,9 @@
 		<tr>
 			<td><%= investment.name %></td>
 			<td><%= investment.investment_type %></td>
-			<td><%= number_to_currency(investment.amount_invested) %></td>
+			<td><%= number_to_currency(investment.amount_invested, precision: 0) %></td>
 			<td><%= number_to_percentage(investment.pct_ownership, precision: 2) %></td>
+			<td><%= number_with_delimiter(investment.shares_bought) %></td>
 			<td><%= investment.investment_date %></td>
 			<td><%= link_to "view", investment %></td>
 			<td><%= link_to "edit", edit_investment_path(investment) %></td>
