--- a/app/views/investments/new.html.erb
+++ b/app/views/investments/new.html.erb
@@ -8,14 +8,19 @@
 
 			  <div><%= f.label :name %><br />
 			  <%= f.text_area :name , placeholder: "Angelic" %></div>
+			  
+			  <div><%= f.label :description %><br />
+			  <%= f.text_area :description , placeholder: "Description Goes Here" %></div>
 
 			  <div><%= f.label :investment_type %><br />
 			  <%= f.text_area :investment_type, placeholder: "Investment Type" %>
 				</div>
-				
 
 			  <div><%= f.label :amount_invested %><br />
 				<%= f.text_area :amount_invested, placeholder: "100000" %>
+
+				<div><%= f.label "Shares Bought" %><br />
+				<%= f.text_area :shares_bought, placeholder: "10000" %>
 
 				<div><%= f.label "Initial Percent Ownership (1-100)" %><br />
 			  <%= f.text_field :pct_ownership, placeholder: 1.5 %></div>
