--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -2,7 +2,7 @@
 	<fieldset>
 		<legend>Edit Investment</legend>
 
-			<%= form_for @investment do |f| %>
+			<%= form_for @company do |f| %>
 
 			  <div><%= f.label :name %><br />
 			  <%= f.text_area :name %></div>
