--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -4,7 +4,7 @@
 	<fieldset>
 		<legend>New Investment</legend>
 
-			<%= form_for @investment do |f| %>
+			<%= form_for @company do |f| %>
 
 			  <div><%= f.label :name %><br />
 			  <%= f.text_area :name , placeholder: "Angelic" %></div>
