--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Welcome To Angelic</h1>
+<div class="row">
+	<div  class="small-6 large-centered columns">
+		<h1>Welcome To Angelic</h1>
+	</div>
+</div>
 
+<div class = "row">
+	<div class="small-6 large-push-4 columns">
+		<%= link_to "Sign In", new_user_session_path, :class => "button" %>
+		or
+		<%= link_to "Sign Up", new_user_registration_path, :class => "button" %>
+	</div>
+</div>
+
+<div class="row">
+	<div class= "small-6 large-push-3 columns">
+		<img src="http://miter.mit.edu/wp-content/uploads/et_temp/Angel-Investing-82963_577x280.png"></a>
+	</div>
+</div>
