updated round relation, investment show view, other changes

--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -20,7 +20,7 @@
 			  <%= f.text_field :shares_bought %></div>
 
 			  <div><%= f.label "Current Percent Ownership (1-100)" %><br />
-			  <%= f.text_field :pct_ownership%></div>
+			  <%= f.text_field :init_pct_ownership%></div>
 
 			  <div><%= f.label :invstment_date %><br />
 			  <%= f.text_field :investment_date%></div>
