--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -23,7 +23,7 @@
 				<%= f.text_area :shares_bought, placeholder: "10000" %>
 
 				<div><%= f.label "Initial Percent Ownership (1-100)" %><br />
-			  <%= f.text_field :pct_ownership, placeholder: 1.5 %></div>
+			  <%= f.text_field :init_pct_ownership, placeholder: 1.5 %></div>
 
 			  <div><%= f.label :invstment_date %><br />
 			  <%= f.text_field :investment_date, placeholder: "April 1, 2014" %></div>
