--- a/app/views/investment_rounds/index.html.erb
+++ b/app/views/investment_rounds/index.html.erb
@@ -1,9 +1,8 @@
-<h1>New Investment Rounds</h1>
-
-<table class="portfolio-table">
+<h1>All of My Investment Rounds </h1>
+<table class="rounds-table">
 	<th >
 		<tr>
-			<div class= "portfolio-table-head">
+			<div class= "rounds-table-head">
 				<td><strong>Company Name</strong></td>
 				<td><strong>Round Name</strong></td>
 				<td><strong>Amount</strong></td>
