--- a/app/assets/stylesheets/companies.css.scss
+++ b/app/assets/stylesheets/companies.css.scss
@@ -33,6 +33,9 @@ ul {
 td {
 	min-width: 150px;
 }
+th {
+  font-size: 30;
+}
 
 .portfolio-table {
   border: none;
@@ -41,4 +44,21 @@ td {
 .portfolio-table-head {
   background-color: black;
   font-style: bold;
+}
+.new-round-button {
+  @include button;
+  background-color: orange;
+}
+.rounds-table {
+  border: none;
+  width: 100%;
+}
+
+.rounds-table-head {
+  background-color: black;
+  font-style: bold;
+}
+.rounds-field {
+  border-width: 10px;
+  border-color: green;
 }
