--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -18,7 +18,7 @@
 			<td><%= c.name %></td>
 			<td><%= c.investment_type %></td>
 			<td><%= number_to_currency(c.amount_invested, precision: 0) %></td>
-			<td><%= number_to_percentage(c.pct_ownership, precision: 2) %></td>
+			<td><%= number_to_percentage(c.init_pct_ownership, precision: 2) %></td>
 			<td><%= number_with_delimiter(c.shares_bought) %></td>
 			<td><%= c.investment_date %></td>
 			<td><%= link_to "view", c %></td>
