--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,52 +1,107 @@
 
 <div class="row">
-	<div class="large-3 large-offset-3 columns">
-		<ul class="company">
-			<li class="company-name"><%= @company.name %></li>
-			<li>
-				<div class="large-3 small-offset-1 columns">
-					<table class ="company-show-table">
-						
-						<tr>
-							<td class="company-descriptor">Description</td>
-							<td><%= @company.description %></td>
-						</tr>
-						<tr>
-							<td class="company-descriptor">Investment Date</td>
-							<td><%= @company.investment_date %></td>
-						</tr>
-						<tr>
-							<td class="company-descriptor">Investment Type</td>
-							<td><%= @company.investment_type %></td>
-						</tr>
-						<tr>
-							<td class="company-descriptor">Amount Invested</td>
-							<td><%= number_to_currency(@company.amount_invested) %></td>
-						</tr>
-						<tr>
-							<td class="company-descriptor">Current % Ownership</td>
-							<td><%= number_to_percentage(@company.pct_ownership, precision: 2) %></td>
-						</tr>
-						<tr>
-							<td class="company-descriptor">Shares Owned</td>
-							<td><%= number_with_delimiter(@company.shares_bought) %></td>
-						</tr>
-						<tr>
-							<td class="company-descriptor">Initial Share Price</td>
-							<td><%= number_to_currency(@company.init_share_price, precision: 2) %></td>
-						</tr>
-						<tr>
-							<td class="company-descriptor">Initial Post-Money Valuation</td>
-							<td><%= number_to_currency(@company.init_post_money, precision: 0) %></td>
-						</tr>
-					</table>
-			</div>
-			</li>
-		</ul>
+	<div class="large-3 large-offset-4 columns">
+			<div class="company-name"><%= @company.name %></div><spam><%= link_to "edit", edit_company_path %></span>
 	</div>
 </div>
-<div class="large-3 large-offset-5 columns">
-	<%= link_to "edit", edit_company_path, :class => "button" %>
-	<%= link_to "Back", companies_index_path, :class => "button" %>
-	<%= link_to "Add New Investment Round", new_investment_round_path(:company_id => @company.id) %>
+
+<fieldset>
+	<legend>Company Description</legend>
+			<p><%= @company.description %></p>
+</fieldset>
+<fieldset>
+	<legend>My Investment</legend>
+			<table>
+				<tr>
+					<td class="company-descriptor">Investment Date</td>
+					<td><%= @company.investment_date %></td>
+				</tr>	
+				<tr>
+					<td class="company-descriptor">Investment Type</td>
+					<td><%= @company.investment_type %></td>
+				</tr>	
+				<tr>
+					<td class="company-descriptor">Initial % Ownership</td>
+					<td><%= number_to_percentage(@company.init_pct_ownership, precision: 2) %></td>
+				</tr>	
+				<tr>
+						<td class="company-descriptor">Shares Bought</td>
+						<td><%= number_with_delimiter(@company.shares_bought) %></td>
+				</tr>
+				<tr>
+					<td class="company-descriptor">Initial Share Price</td>
+					<td><%= number_to_currency(@company.init_share_price, precision: 2) %></td>
+				</tr>
+				<tr>
+					<td class="company-descriptor">Amount Invested</td>
+					<td><%= number_to_currency(@company.amount_invested, precision: 0) %></td>
+				</tr>
+				<tr>
+					<td class="company-descriptor">Initial Post-Money Valuation</td>
+					<td><%= number_to_currency(@company.init_post_money, precision: 0) %></td>
+				</tr>
+				
+			</table>
+</fieldset>
+<fieldset>
+	<legend>Current Company Status</legend>
+		<table>
+				<tr>
+					<td class="company-descriptor">Most Recent Valuation</td>
+					<td><%= number_to_currency(@company.current_valuation, precision: 0) %></td>
+				</tr>
+				<tr>
+					<td class="company-descriptor">Current % Ownership</td>
+					<td><%= number_to_percentage(@company.current_pct_ownership, precision: 2) %></td>
+				</tr>	
+				<tr>
+						<td class="company-descriptor">Current Share Price</td>
+						<td><%= number_with_delimiter(@company.current_share_price, precision: 2) %></td>
+				</tr>
+				<tr>
+					<td class="company-descriptor">Current investment Value</td>
+					<td><%= number_to_currency(@company.current_investment_value, precision: 0) %></td>
+				</tr>
+				<tr>
+					<td class="company-descriptor">Unrealized ROI</td>
+					<td><%= number_to_percentage(@company.unrealized_roi, precision: 2) %></td>
+				</tr>
+				
+			</table>
+</fieldset>
+
 <div class="large-3 large-offset-4 columns">
+
+	<%= link_to "Add New Investment Round", new_investment_round_path(:company_id => @company.id), :class => "new-round-button" %>
+</div>
+
+<fieldset class="rounds-field">
+	<legend>Additional Investment Rounds for <%= @company.name %></legend>
+		<table class="rounds-table">
+			<th >
+				<tr>
+					<div class= "rounds-table-head">
+						<td><strong>Round Name</strong></td>
+						<td><strong>Amount</strong></td>
+						<td><strong>Pre-Money Valuation</strong></td>
+						<td><strong>Share price</strong></td>
+						<td><strong>Investors</strong></td>
+						<td><strong>Investment Date</strong></td>
+					</div>
+				</tr>
+			</th>
+			<% @rounds.each do |investment_round| %>
+				<tr>
+					<td><%= investment_round.round_name %></td>
+					<td><%= number_to_currency(investment_round.investment_amount, precision: 0) %></td>
+					<td><%= number_to_currency(investment_round.pre_money_valuation, precision: 0) %></td>
+					<td><%= number_to_currency(investment_round.share_price, precision: 2) %></td>
+					<td><%= investment_round.investors %></td>
+					<td><%= investment_round.investment_date %></td>
+					<td><%= link_to "view", investment_round %></td>
+					<td><%= link_to "edit", edit_investment_round_path(investment_round) %></td>
+				</tr>
+</fieldset>
+			<% end %>
+
+		</table>
