--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -21,8 +21,9 @@
 			<td><%= number_to_percentage(c.init_pct_ownership, precision: 2) %></td>
 			<td><%= number_with_delimiter(c.shares_bought) %></td>
 			<td><%= c.investment_date %></td>
-			<td><%= link_to "view", c %></td>
-			<td><%= link_to "edit", edit_company_path(c) %></td>
+			<td><%= link_to "View", c %></td>
+			<td><%= link_to "Edit", edit_company_path(c) %></td>
+			<td><%= link_to "Delete", c , method: :delete, data: { confirm: "Are you sure your want to delete this Comany?"} %></td>
 		</tr>
 
 	<% end %>
