--- a/app/views/scenarios/new.html.erb
+++ b/app/views/scenarios/new.html.erb
@@ -14,8 +14,8 @@
 			  <div><%= f.label :exit_valuation %><br />
 				<%= f.text_area :exit_valuation, placeholder: "1000000000" %>
 
-				<div><%= f.label :dilution %><br />
-			  <%= f.text_field :dilution, placeholder: "5" %></div>
+				<div><%= f.label "Dilution (Average dilution from Series A to Exit about 50%" %><br />
+			  <%= f.text_field :dilution, placeholder: "50%" %></div>
 
 			  <%= f.hidden_field :company_id, value: @company.id %>
 
