--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -25,7 +25,7 @@
 							</tr>	
 							<tr>
 								<td class="company-descriptor">Initial % Ownership</td>
-								<td><%= number_to_percentage(@company.init_pct_ownership, precision: 2) %></td>
+								<td><%= number_to_percentage(@company.init_pct_ownership, precision: 1) %></td>
 							</tr>	
 							<tr>
 									<td class="company-descriptor">Shares Bought</td>
@@ -57,7 +57,7 @@
 							</tr>
 							<tr>
 								<td class="company-descriptor">Current % Ownership</td>
-								<td><%= number_to_human(@company.current_pct_ownership*100, precision: 3) %>%</td>
+								<td><%= number_to_percentage(@company.current_pct_ownership*100, precision: 1) %></td>
 							</tr>	
 							<tr>
 									<td class="company-descriptor">Current Share Price</td>
