--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,6 @@
   <body>
     <div class="sticky">
     <nav class="top-bar" data-topbar>
-
-      
-
       <section class="top-bar-section">
         <ul class="title-area">
           <li class="name"><%= link_to "Angelic", root_path %></li>
@@ -30,7 +27,7 @@
               <li><a href="#">Organizations</a></li>
               <li><a href="#">People</a></li>
             </ul>
-          <li><a href="#">Portfolio Report</a></li>
+          <li><a href="/about">Next Steps</a></li>
           </li>
         </ul>
 
